# budgetbuddy

./: .gitignore  MODULE.bazel  README.md  go.mod
.github/workflows/: ci.yaml
cmd/budgetbuddy/: BUILD.bazel  main.go
docs/: plan.md  vision.md
internal/categorize/: BUILD.bazel  categorizer.go  categorizer_test.go
internal/cmd/: BUILD.bazel  cmd_test.go  config.go  config_category.go  config_rule.go  config_source.go  edit.go  parse.go  report.go  root.go
internal/db/: BUILD.bazel  db.go  db_test.go  migrations.go  models.go
internal/parse/: BUILD.bazel  parse_test.go  parser.go  source.go
internal/prompt/: BUILD.bazel  category_selector.go  prompt_test.go  source_wizard.go
internal/types/: BUILD.bazel  types.go  types_test.go
