load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "budgetbuddy_lib",
    srcs = ["main.go"],
    importpath = "github.com/ChrisVandoo/budgetbuddy/cmd/budgetbuddy",
    visibility = ["//visibility:private"],
    deps = ["//internal/cmd"],
)

go_binary(
    name = "budgetbuddy",
    embed = [":budgetbuddy_lib"],
    visibility = ["//visibility:public"],
)
