load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parse",
    srcs = [
        "parser.go",
        "source.go",
    ],
    importpath = "github.com/ChrisVandoo/budgetbuddy/internal/parse",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/types",
        "@in_gopkg_yaml_v3//:go_default_library",
    ],
)

go_test(
    name = "parse_test",
    srcs = ["parse_test.go"],
    deps = [
        ":parse",
        "//internal/types",
    ],
)
